--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "express": "^5.2.1",
     "pg": "^8.17.2",
     "uuid": "^13.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.11"
   }
 }
